add cron trigger; work for one task only
